infra/kubernetes/deployment-homolog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-custom-backend-homolog
  namespace: doc-custom-homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-custom-backend-homolog
  template:
    metadata:
      labels:
        app: doc-custom-backend-homolog
    spec:
      containers:
        - name: doc-custom-backend-homolog-container
          image: ghcr.io/oondemand/fatura-personalizada-backend:${IMAGE_TAG}-homolog
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "3072Mi"
              cpu: "2"
