infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fatura-personalizada-backend
  namespace: fatura-personalizada-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fatura-personalizada-backend
  template:
    metadata:
      labels:
        app: fatura-personalizada-backend
    spec:
      containers:
        - name: fatura-personalizada-backend-container
          image: ghcr.io/oondemand/fatura-personalizada-backend:${IMAGE_TAG}
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "3072Mi"
              cpu: "2"
