infra/kubernetes/service-homolog.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-custom-backend-homolog-service
  namespace: doc-custom-homolog
spec:
  type: NodePort
  selector:
    app: doc-custom-backend-homolog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
