infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-custom-backend-service
  namespace: doc-custom
spec:
  type: NodePort
  selector:
    app: doc-custom-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
