infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fatura-personalizada-backend-ingress
  namespace: fatura-personalizada-v2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.fatura-personalizada.oondemand.com.br
      secretName: app-tls
  rules:
    - host: api.fatura-personalizada.oondemand.com.br
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fatura-personalizada-backend-service
                port:
                  number: 80
